--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/SangmokKIM1994/sm_mySQL#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
